--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ h5 {
     color: #a7b1c2;
     font-weight: 600;
     padding: 14px 20px 14px 25px;
-    font-size: 20px;
+    /*font-size: 20px;*/
     text-transform: uppercase;
 }
 .nav.navbar-right > li > a {
