--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ h5 {
 .nav > li > a {
     color: #a7b1c2;
     font-weight: 600;
-    padding: 14px 20px 14px 25px;
+    padding: 10px 20px 10px 25px;
     /*font-size: 20px;*/
     text-transform: uppercase;
 }
@@ -54,7 +54,7 @@ h5 {
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus {
     background-color: #293846;
-    color: white;
+    color: yellow;
 }
 .nav .open > a,
 .nav .open > a:hover,
